tests/function/missing_comma_in_params.rz
fn foo(a: bool, b: str c, d, e, f) {} // error: missing comma to seperate arguments